# SomeNoteAboutROS

./: README.md  testgit.py
GUI_ROS_Service/UI_ws/devel/: .catkin  .rosinstall
GUI_ROS_Service/UI_ws/devel/include/subt_msgs/: ArtifactPoseArray.h  (+22 more)
GUI_ROS_Service/UI_ws/src/ncsist_gui/: CMakeLists.txt
GUI_ROS_Service/UI_ws/src/ncsist_gui/launch/: start_ui.launch
GUI_ROS_Service/UI_ws/src/ncsist_gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pub.py  sub_artimap.cpp  sub_artimap.h  sub_thread.cpp  sub_thread.h  ui_server.py
GUI_ROS_Service/catkin_ws_test/devel/: .catkin
GUI_ROS_Service/catkin_ws_test/src/test/: CMakeLists.txt  package.xml
GUI_ROS_Service/catkin_ws_test/src/test/launch/: test_gui.launch
GUI_ROS_Service/catkin_ws_test/src/test/src/: c_server.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pose_server.cpp  py_server.py  server.py  sub_thread.cpp  sub_thread.h  test.cpp
GraphViz/Husky_viz/: Makefile
GraphViz/NewHuskyViz/: rqt.dot.in
GraphViz/locobot_viz/: Makefile  locobot_astar_rqt.dot.in
astar_practice/: ani.py  astar.py  astar_ani.py
color_shape_detect/: README.md
color_shape_detect/py_test/: PseudoCode.txt  README.md  table.py
color_shape_detect/ws_cv/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
color_shape_detect/ws_cv/src/pkg_cv/: CMakeLists.txt
image-processing-course/: Project2_309605008.ipynb  Project3_309605008.ipynb  Project5_309605008.ipynb
robotics-course/Robotics_Project1_309605008/: Robotics_Project1_309605008.ipynb  Robotics_Project1_309605008.py
robotics-course/Robotics_Project2_309605008/: Robotics_Project2_309605008.ipynb  robotics_project2_309605008.py
test_service/: README.md
test_service/ws_testservice/src/pkg_testservice/: CMakeLists.txt  package.xml
test_viz/: rqt.dot.in
ws_testservice/devel/: .catkin  .rosinstall  _setup_util.py
ws_testservice/devel/include/pkg_testservice/: img_srv.h  img_srvRequest.h  img_srvResponse.h
ws_testservice/devel/lib/pkgconfig/: pkg_testservice.pc
ws_testservice/src/pkg_testservice/src/: add_two_ints_server.py  img_server.py
ws_testservice/src/pkg_testservice/srv/: img_srv.srv
ws_why/devel/: .catkin  .rosinstall  local_setup.sh
ws_why/devel/include/pkg_why/: img_srv.h  img_srvRequest.h  img_srvResponse.h
ws_why/devel/lib/pkgconfig/: pkg_why.pc
ws_why/src/pkg_why/: CMakeLists.txt
ws_why/src/pkg_why/src/: detect.py  i.py  img_client.py  img_pub.py  img_server.py  img_sub.py  imshow.py  sample.py  sample_server.py
ws_why/src/pkg_why/srv/: img_srv.srv
(+219 files in other folders)
